# deep_micro_core

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: Metadata_CNR_IVI.csv  ampliseq.config  ampliseq_test.json  config_test.json  fetchngs.config
config/metadata/: Metadata_IDs.csv  Metadata_IDs_split.csv
config/metadata/cow_FARMINN/: mapping_file.csv
config/metadata/goat_CASCO/: .~lock.Disegno sperimentale e campioni P-T-SQUARE-GOAT.xls#  .~lock.SRA_data_Summary_CASCO.csv#  CASCO_goat_metadata.csv  Disegno sperimentale e campioni P-T-SQUARE-GOAT.xls  SRA_data_Summary_CASCO.csv  Spiegazione_Dataset_CASCO_perIBBA_27042026.docx
config/metadata/gut_LEGUPLUS/: mapping_file.csv
config/metadata/gut_RABOLA/: mapping_file.csv
config/metadata/milk_MORGOAT/: mapping_file.csv
config/metadata/milk_RABOLA-aloe/: filereport_read_run_PRJEB72623.tsv  mapping_file.csv  samples.csv
config/metadata/milk_RABOLA-bacteriocin/: SraRunTable.csv  mapping_file.csv
config/metadata/rumen_RABOLA/: .~lock.Checklist_GSC-MIxS host associated_1719915001103.tsv#  .~lock.filereport_read_run_PRJEB77087.tsv#  Checklist_GSC-MIxS host associated_1719915001103.tsv  filereport_read_run_PRJEB77087.tsv  mapping_file.csv
data/: test_PRJEB60148.csv  test_PRJNA515520_samplesheet.csv
docs/: ampliseq-example.md  fetchngs-example.md  merge-results.md
notebooks/: 01-describe_merged_sequences.ipynb  02-describe_otu_table.ipynb  03-logistic_regression.ipynb  04-logistic_regression_stratified.ipynb
src/: __init__.py  create_metadata.py  database.py  ftp.py  import_data.py  make_samplesheet.py  make_samplesheet_nosubfolder.py
src/core_microbiome/: core_microbiome.r  core_microbiome_tutorial.Rmd
src/lasso/: 1.filter_normalize.r  2.fine_tuning.r  3.train_and_evaluate_lasso_model.r  filter_normalize.r  train_lasso_model.r
src/merge_results/: merge_qiime2_rep_seqs.py  merge_qiime2_tables.py  merge_qiime2_taxonomy.py  run_all_qiime2.sh
src/preprocessing/: filter_feature_table.sh  train_val_test_split.py
src/support_functions/: metadata_prep.r  parse_results.r
src/tree_based_model/: train_trees.ipynb
