[tool.poetry]
name = "deep-micro-core"
version = "0.1.0"
description = "Harnessing the power of artificial intelligence to identify the core microbiome"
authors = ["Filippo Biscarini <https://github.com/filippob>, Paolo Cozzi <https://github.com/bunop>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
